[package]
name = "print"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.7"
log = "0.4.8"
druid-shell = "0.7.0"

walkdir = "2"

# mime type
infer = "0.3"

druid-theme-loader = { version = "0.1.0", path = "druid-theme-loader", features = ["notify"] }

[patch.crates-io]
druid = { version = "0.7.0", git = "https://github.com/linebender/druid.git", rev = "31c39744" }

[workspace]
members = ["druid-theme-loader"]
